--- a/erpSystem/src/main/webapp/WEB-INF/web.xml
+++ b/erpSystem/src/main/webapp/WEB-INF/web.xml
@@ -12,17 +12,17 @@
 		<welcome-file>default.htm</welcome-file>
 		<welcome-file>default.jsp</welcome-file>
 	</welcome-file-list>
-	
-	<!-- JSTL taglibs mapping-->
+
+	<!-- JSTL taglibs mapping -->
 	<jsp-config>
 		<jsp-property-group>
 			<url-pattern>*.jsp</url-pattern>
 			<include-prelude>/WEB-INF/taglibs.jsp</include-prelude>
 		</jsp-property-group>
 	</jsp-config>
-	
-	
-	<!--Servlet mapping-->
+
+
+	<!--Servlet mapping -->
 	<servlet>
 		<servlet-name>Service</servlet-name>
 		<servlet-class>controller.Service</servlet-class>
@@ -31,9 +31,9 @@
 		<servlet-name>Service</servlet-name>
 		<url-pattern>/service</url-pattern>
 	</servlet-mapping>
-	
-	
-	<!--Header mapping-->
+
+
+	<!--Header mapping -->
 	<servlet>
 		<servlet-name>header</servlet-name>
 		<jsp-file>/views/header.jsp</jsp-file>
@@ -42,9 +42,9 @@
 		<servlet-name>header</servlet-name>
 		<url-pattern>/header</url-pattern>
 	</servlet-mapping>
-	
-	
-	<!--Footer mapping-->
+
+
+	<!--Footer mapping -->
 	<servlet>
 		<servlet-name>footer</servlet-name>
 		<jsp-file>/views/footer.jsp</jsp-file>
@@ -53,9 +53,9 @@
 		<servlet-name>footer</servlet-name>
 		<url-pattern>/footer</url-pattern>
 	</servlet-mapping>
-	
-	
-	<!--Login mapping-->
+
+
+	<!--Login mapping -->
 	<servlet>
 		<servlet-name>login</servlet-name>
 		<jsp-file>/views/login.jsp</jsp-file>
@@ -64,9 +64,9 @@
 		<servlet-name>login</servlet-name>
 		<url-pattern>/login</url-pattern>
 	</servlet-mapping>
-	
-	
-	<!--Regist mapping-->
+
+
+	<!--Regist mapping -->
 	<servlet>
 		<servlet-name>regist</servlet-name>
 		<jsp-file>/views/regist.jsp</jsp-file>
@@ -74,6 +74,15 @@
 	<servlet-mapping>
 		<servlet-name>regist</servlet-name>
 		<url-pattern>/regist</url-pattern>
+	</servlet-mapping>
+
+	<servlet>
+		<servlet-name>dropCustomer</servlet-name>
+		<jsp-file>/views/dropCustomer.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>dropCustomer</servlet-name>
+		<url-pattern>/dropCustomer</url-pattern>
 	</servlet-mapping>
 
 </web-app>
