--- a/erpSystem/src/main/webapp/WEB-INF/web.xml
+++ b/erpSystem/src/main/webapp/WEB-INF/web.xml
@@ -227,6 +227,16 @@
 		<servlet-name>reviewDetail</servlet-name>
 		<url-pattern>/reviewDetail</url-pattern>
 	</servlet-mapping>
+	
+		<!-- main mapping -->
+	<servlet>
+		<servlet-name>main</servlet-name>
+		<jsp-file>/views/main.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>main</servlet-name>
+		<url-pattern>/main</url-pattern>
+	</servlet-mapping>
 
 
 </web-app>
