Update board view

--- a/erpSystem/src/main/webapp/WEB-INF/web.xml
+++ b/erpSystem/src/main/webapp/WEB-INF/web.xml
@@ -239,5 +239,35 @@
 		<servlet-name>main</servlet-name>
 		<url-pattern>/main</url-pattern>
 	</servlet-mapping>
+	
+		<!-- board mapping -->
+	<servlet>
+		<servlet-name>board</servlet-name>
+		<jsp-file>/views/board.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>board</servlet-name>
+		<url-pattern>/board</url-pattern>
+	</servlet-mapping>
+	
+		<!-- boardView mapping -->
+	<servlet>
+		<servlet-name>boardView</servlet-name>
+		<jsp-file>/views/boardView.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>boardView</servlet-name>
+		<url-pattern>/boardview</url-pattern>
+	</servlet-mapping>
+
+		<!-- boardWrite mapping -->
+	<servlet>
+		<servlet-name>boardWrite</servlet-name>
+		<jsp-file>/views/boardWrite.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>boardWrite</servlet-name>
+		<url-pattern>/boardwrite</url-pattern>
+	</servlet-mapping>
 
 </web-app>
