Create salesTotal.jsp with using gooleChart api

--- a/erpSystem/src/main/webapp/WEB-INF/web.xml
+++ b/erpSystem/src/main/webapp/WEB-INF/web.xml
@@ -306,6 +306,15 @@
 		<url-pattern>/orderconfirmation</url-pattern>
 	</servlet-mapping>
 	
-	
+	<!-- totalSales mapping -->
+	<servlet>
+		<servlet-name>totalSales</servlet-name>
+		<jsp-file>/views/totalSales.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>totalSales</servlet-name>
+		<url-pattern>/totalsales</url-pattern>
+	</servlet-mapping>
+		
 	
 </web-app>
