Create add cart&purchase options

--- a/erpSystem/src/main/webapp/WEB-INF/web.xml
+++ b/erpSystem/src/main/webapp/WEB-INF/web.xml
@@ -231,6 +231,15 @@
 		<url-pattern>/totalsales</url-pattern>
 	</servlet-mapping>
 	
+		<!-- totalSales mapping -->
+	<servlet>
+		<servlet-name>cartList</servlet-name>
+		<jsp-file>/views/cartList.jsp</jsp-file>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>cartList</servlet-name>
+		<url-pattern>/cartlist</url-pattern>
+	</servlet-mapping>
 	
 		
 
